codegen/tests/ui/main/return-tuple.stderr
error: shuttle_runtime::main functions need to return a first class service or 'Result<impl Service, shuttle_runtime::Error>

         = help: See the docs for services with first class support
         = note: https://docs.rs/shuttle-service/latest/shuttle_runtime/attr.main.html#shuttle-supported-services

 --> tests/ui/main/return-tuple.rs:2:28
  |
2 | async fn return_tuple() -> (String, bool) {}
  |                            ^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/main/return-tuple.rs:2:45
  |
2 | async fn return_tuple() -> (String, bool) {}
  |                                             ^ consider adding a `main` function to `$DIR/tests/ui/main/return-tuple.rs`
